# ai-canvas

./: .gitignore  README.md  package.json  pnpm-lock.yaml  prisma.config.ts  turbo.json
apps/web/: instrumentation.ts  next.config.mjs  package.json
apps/web/app/: ai-canvas.tsx  ai-config.ts  layout.tsx  page.tsx  scrollbar.css
apps/web/db/: index.ts
apps/web/lib/: mock-api.ts  openapi.ts  validation-error.ts  worker-proxy.ts
apps/web/prisma/: schema.prisma
apps/web/services/: conversations.ts  draw-tasks.ts  errors.ts  generated-images.ts  ids.ts  image-storage.ts  index.ts  openai-images.ts  (+4 more)
apps/worker/: README.md  package.json  pyproject.toml
apps/worker/docs/: worker.md
apps/worker/src/ai_canvas_worker/: __init__.py  cli.py  image_storage.py  openai_images.py  runner.py  server.py  store.py
apps/worker/src/worker/: app_services.py  branching.py  cli.py  config.py  image_storage.py  openai_images.py  runner.py  server.py  store.py  task.py  validation.py
apps/worker/src/worker/api/: __init__.py  schemas.py  utils.py
apps/worker/src/worker/routes/: __init__.py  draw_tasks.py  images.py  provider_config.py  schemas.py  system.py  utils.py
apps/worker/src/worker/routes/v1/: __init__.py  conversations.py  draw_tasks.py  images.py  messages.py  paths.py  provider_config.py  public_urls.py  system.py
apps/worker/src/worker/services/: __init__.py  draw_tasks.py  image_generation.py  provider_config.py
docs/: python-worker-merge-into-nextjs-plan.md
mvp/: 2026-05-12-conversation-driven-ai-image-canvas-mvp.md
scripts/: wait-worker-ready.mjs
(+119 files in other folders)
