[project]
name = "ai-canvas-worker"
version = "0.0.1"
description = "Background worker for AI canvas drawing tasks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.36.0",
]

[project.scripts]
ai-canvas-worker = "ai_canvas_worker.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
