[project]
name = "ai-canvas-worker"
version = "0.0.1"
description = "Background worker for AI canvas drawing tasks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.2",
    "openai>=2.36.0",
    "uvicorn[standard]>=0.38.0",
]

[project.scripts]
ai-canvas-worker = "worker.cli:main"

[tool.uv.build-backend]
module-name = "worker"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
